<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="3dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgclose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_close"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/lblFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_filter_title"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/imgclose"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/lblsort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Sort_by"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/lblFilter"
        app:layout_constraintStart_toStartOf="@id/lblFilter"/>

    <ImageView
        android:id="@+id/imgAll"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/leave_calendar"
        app:layout_constraintTop_toBottomOf="@id/lblsort"
        app:layout_constraintStart_toStartOf="@id/lblsort"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/lblall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_typecontent_one"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/lblsort"
        app:layout_constraintStart_toEndOf="@id/imgAll"/>

    <ImageView
        android:id="@+id/imgapprove"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/leave_reason"
        app:layout_constraintTop_toBottomOf="@id/imgAll"
        app:layout_constraintStart_toStartOf="@id/imgAll"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/lblapprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_typecontent_two"
        android:textSize="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/lblall"
        app:layout_constraintStart_toEndOf="@id/imgapprove"/>

    <ImageView
        android:id="@+id/imgreject"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/leave_calendarclock"
        app:layout_constraintTop_toBottomOf="@id/imgapprove"
        app:layout_constraintStart_toStartOf="@id/imgapprove"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/lblreject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_typecontent_three"
        android:textSize="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="6dp"
        android:padding="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/lblapprove"
        app:layout_constraintStart_toEndOf="@id/imgreject"/>

    <TextView
        android:id="@+id/lblsortdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Sort_by_date"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/lblreject"
        app:layout_constraintStart_toStartOf="@id/lblFilter"/>
    <RelativeLayout
        android:id="@+id/rlfromto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblsortdate"
        app:layout_constraintStart_toStartOf="@id/lblsortdate">

    <TextView
        android:id="@+id/lblfrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_FromDate"
        android:textSize="@dimen/fourteen_size"
        android:layout_marginLeft="60dp"
        android:textColor="@color/clr_dark_grey"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/lblto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Todate"
        android:textSize="14dp"
        android:gravity="center"
        android:textColor="@color/clr_dark_grey"
        android:padding="5dp"
        android:layout_marginLeft="170dp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/rlfromto"
        android:background="@drawable/bg_editbox_black">
        <ImageView
            android:id="@+id/imgcalendar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/calendar_clock"/>
        <TextView
            android:id="@+id/lblfromdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_month"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:layout_toRightOf="@id/imgcalendar"/>
        <TextView
            android:id="@+id/lblfromday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_day"
            android:gravity="top"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:layout_marginStart="10dp"

            android:textColor="@color/clr_dark_grey"
            android:textSize="16dp"
            android:layout_toRightOf="@id/imgcalendar"
            android:layout_below="@id/lblfromdate"/>
        <ImageView
            android:id="@+id/imgarrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:src="@drawable/calendar_clock"/>
        <TextView
            android:id="@+id/lblenddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="13 AUG"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal"
            android:layout_toRightOf="@id/imgarrow"/>
        <TextView
            android:id="@+id/lblendday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_day"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/clr_dark_grey"
            android:textSize="16dp"
            android:layout_toRightOf="@id/imgarrow"
            android:layout_below="@id/lblenddate"/>
    </RelativeLayout>

        <Button
            android:id="@+id/btnapply"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_applyfilter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_above="@id/btnclear"
            android:textSize="16dp"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnclear"
            android:background="@drawable/rectangle_orange"/>

        <Button
            android:id="@+id/btnclear"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_clearfilter"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:textColor="@color/app_color"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_blackstroke"/>

</androidx.constraintlayout.widget.ConstraintLayout>
