<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_image">


    <TextView
        android:id="@+id/lblphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty5_size"
        android:layout_marginTop="@dimen/two_hundred"
        android:text="@string/txt_phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edphone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty5_size"
        android:layout_marginTop="@dimen/ten_size"
        android:layout_marginBottom="@dimen/ten_size"
        android:layout_marginLeft="@dimen/fourty_size"
        android:layout_marginRight="@dimen/thirty_size"
        android:background="@drawable/editbg"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:maxLength="10"
        android:padding="@dimen/dimen_three"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_size"
        app:layout_constraintTop_toBottomOf="@id/lblphone"
        app:layout_constraintStart_toStartOf="@id/lblphone"/>

    <TextView
        android:id="@+id/lblpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_size"
        android:layout_marginTop="@dimen/ten_size"
        android:layout_marginLeft="@dimen/fourty_size"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/edphone"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edpswd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty5_size"
        android:layout_marginTop="@dimen/ten_size"
        android:layout_marginBottom="@dimen/ten_size"
        android:layout_marginLeft="@dimen/fourty_size"
        android:layout_marginRight="@dimen/thirty_size"
        android:background="@drawable/editbg"
        android:layout_centerInParent="true"
        android:password="true"
        android:padding="@dimen/dimen_three"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_size"
        app:layout_constraintTop_toBottomOf="@id/lblpswd"
        app:layout_constraintStart_toStartOf="@id/lblpswd"/>

    <TextView
        android:id="@+id/lblfrgtpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgot_password"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/ten_size"
        android:textSize="@dimen/fourteen_size"
        android:padding="@dimen/dimen_five"
        android:layout_marginEnd="@dimen/fifteen_size"
        app:layout_constraintTop_toBottomOf="@id/edpswd"
        app:layout_constraintEnd_toEndOf="@id/edpswd"/>
    <TextView
        android:id="@+id/lblview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_as"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_size"
        android:layout_marginStart="@dimen/fourty_size"
        android:layout_marginTop="@dimen/dimen_five"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/lblfrgtpswd"
        app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
        android:id="@+id/spinview"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/ten_size"
        android:background="@drawable/spinbg"
        android:layout_marginLeft="@dimen/fourty_size"
        android:layout_marginRight="@dimen/thirty_size"
        app:layout_constraintTop_toBottomOf="@id/lblview"
        app:layout_constraintStart_toStartOf="@id/lblview"/>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/loginbtnbg"
        android:padding="1dp"
        android:text="@string/txt_log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/spinview"
        android:textSize="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>